# Easy-MP2RAGE-T1-Map

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/skills/porting-neuro-tools-to-browser-wasm/: SKILL.md
.github/workflows/: ci.yml  deploy-pages.yml
crates/mp2rage-cli/: Cargo.toml
crates/mp2rage-cli/src/: lib.rs  load.rs  main.rs  nifti_io.rs  pipeline.rs
crates/mp2rage-cli/tests/: pipeline_parity.rs
crates/mp2rage-core/: Cargo.toml
crates/mp2rage-core/src/: b1fill.rs  correct.rs  denoise.rs  dicom.rs  filt.rs  interp.rs  lib.rs  mask.rs  model.rs  pipeline.rs  resample.rs
crates/mp2rage-core/tests/: parity.rs
crates/mp2rage-wasm/: Cargo.toml
crates/mp2rage-wasm/src/: lib.rs
crates/mp2rage-wasm/tests/: flat_parity.rs
docs/: DEPLOY.md
mp2rage_t1/: __init__.py  cli.py  denoise.py  dicom_io.py  model.py  pipeline.py  qc.py
tools/: build_wasm.sh  gen_golden.py
tools/golden/: manifest.json  u_T1matrix.npy  u_build_B1_vector.npy  u_gauss64_in.npy  u_gauss64_out.npy  u_gauss_in.npy  u_gauss_out.npy  u_interp_dec_out.npy  u_morph_closed.npy  u_morph_in.npy  u_mp2rage_lut_I.npy  u_mp2rage_lut_T.npy  u_mprage_S1.npy  u_mprage_S2.npy  u_pchip_out.npy  u_pchip_q.npy  u_pchip_x.npy  u_pchip_y.npy  u_rc_inv1.npy  u_rc_inv2.npy  u_rc_out.npy  u_rc_uni.npy  u_sa2rage_lut_B1.npy  u_sa2rage_lut_I.npy  v_b1_lowres_post_gauss.npy  v_b1_lowres_pre_gauss.npy  v_b1_resampled_mp.npy  v_b1map_corr_T1_ms.npy  v_b1map_corr_UNI.npy  v_b1map_grid_mp.npy  v_b1map_tfl.npy  v_corr_B1.npy  v_corr_T1_ms.npy  v_corr_UNI.npy  v_inv2.npy  v_mask.npy  v_ratio_resampled_mp.npy  v_sa2rage.npy  v_uncorr_T1_s.npy  v_uni.npy
web/: CNAME  README.md  index.html  package.json
web/js/: app.js  bids.js  nifti.js  worker.js  zip.js
web/test/: bids_test.mjs  e2e_node.mjs
